==> sensorplatforms/open-sensor-platform/embedded/common/modules/bus-drivers/lpc5410x-cm4/I2C_Driver.c <==
#include "Common.h"
#include "I2C_Driver.h"
#include "lpc_types.h"
#define    I2C_TXRX_STATUS_ACTIVE               0
#define    I2C_TXRX_STATUS_PASSED               1
#define    I2C_TXRX_STATUS_FAILED               2

osp_bool_t I2C_HardwareSetup( I2C_TypeDef *busId )
{
    if (busId == LPC_I2C0)
    {
        if (sI2C_Bus1Initialized)
        {
            return true;
        }
        /* Configure the I2C interface in Master mode with the given speed */
        Chip_IOCON_PinMuxSet(LPC_IOCON, I2C_SENSOR_BUS_SCL_PIN);
        Chip_IOCON_PinMuxSet(LPC_IOCON, I2C_SENSOR_BUS_SDA_PIN);

        Chip_I2C_Init(busId); /* Enables clock and resets the peripheral */

        /* setup speed and config. as Master */
        Chip_I2C_SetClockDiv( busId, I2C_MASTER_CLOCK_DIV );
        Chip_I2CM_SetBusSpeed( busId, I2C_MCLOCK_SPEED );
        /* Reset master state machine */
        Chip_I2CM_Disable( busId );
        Chip_I2CM_Enable( busId );

        /* Enable interrupt for pending status */
        Chip_I2C_EnableInt( busId, I2C_INTENSET_MSTPENDING );

        I2C_Master_Initialise();

        /* Configure TWI interrupts */
        NVIC_SetPriority( I2C_SENSOR_BUS_IRQn, I2C_SENSOR_BUS_INT_PRIORITY );
        NVIC_EnableIRQ( I2C_SENSOR_BUS_IRQn );           //enable I2C isr


        sI2C_Bus1Initialized = true;

        return true;
    }
    return false;
}

void I2C_Wait_Completion( void )
{
#if 1
    OS_RESULT result;

    result = os_evt_wait_or( I2C_TXRX_STATUS_FAILED | I2C_TXRX_STATUS_PASSED, MSEC_TO_TICS(10));
    if (result == OS_R_TMO)
    {
        D0_printf("### WARNING - Timedout on I2C completion [%02X - %02X] ###\r\n", asyncXfer.i2c_slave_addr, asyncXfer.i2c_slave_reg);
    }
#else
    while( asyncXfer.i2c_txrx_status == I2C_TXRX_STATUS_ACTIVE );
#endif
}

uint8_t I2C_Start_Transfer( uint8_t slaveAddr, uint16_t regAddr, uint8_t *pData, uint8_t dataSize, I2C_SendMode_t sendMode )
{
    /* Check that no transfer is already pending*/
    if (asyncXfer.i2c_txrx_status == I2C_TXRX_STATUS_ACTIVE)
    {

        D0_printf("I2C_Start_Transfer: A transfer is already pending\n\r");
        return I2C_ERR_BUSY;
    }

    /* Update the transfer descriptor */
    asyncXfer.i2c_slave_addr  = slaveAddr << 1;
    asyncXfer.i2c_slave_reg   = regAddr;
    asyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_ACTIVE;
    asyncXfer.pData           = pData;
    asyncXfer.num             = dataSize;
    asyncXfer.byte_index      = 0;
    asyncXfer.i2c_txrx_phase  = 0;
    i2c_mode = sendMode;

    /* Enable read interrupt and start the transfer */
    I2C_SENSOR_BUS->MSTDAT = asyncXfer.i2c_slave_addr; //SLA+W
    I2C_SENSOR_BUS->MSTCTL = I2C_MSTCTL_MSTSTART;        //generate a START before enabling the interrupt
    I2C_SENSOR_BUS->INTENSET = I2C_STAT_MSTPENDING;

    return I2C_ERR_OK;
}
