==> sensorplatforms/open-sensor-platform/embedded/common/modules/bus-drivers/STM32F0xx-CM0/i2c_driver.c <==
#include "common.h"
#include "i2c_driver.h"
#define I2C_TXRX_STATUS_ACTIVE          0x0
#define I2C_TXRX_STATUS_PASSED          0x1
#define I2C_TXRX_STATUS_FAILED          0x2
#define I2C_TXRX_STATUS_NACK            0x4

void I2C_HardwareSetup(void)
{
    GPIO_InitTypeDef  GPIO_InitStructure;
    NVIC_InitTypeDef  NVIC_InitStructure;
    I2C_InitTypeDef   I2C_InitStructure;
    /* init gpio struct */
    GPIO_StructInit(&GPIO_InitStructure);
    
    /* Reset the peripheral (this allows soft restarts to recover the bus in case of hangups) */
    I2C_DeInit(DBG_IF_I2C);

    /* Enable Clocks to the peripheral and GPIOs used */
    /* No need to enable GPIOB here, as it is already enabled */
    RCC_AHBPeriphClockCmd(DBG_IF_I2C_GPIO_GRP_RCC, ENABLE );
    RCC_CLKFTN_DBG_I2C(RCC_PERIPH_DBG_I2C, ENABLE);
    

    /* Enable Alternate function for I2C */
    GPIO_PinAFConfig(DBG_IF_I2C_GPIO_GRP, DBG_IF_I2C_CLK_SRC, DBG_IF_I2C_CLK_AF);
    GPIO_PinAFConfig(DBG_IF_I2C_GPIO_GRP, DBG_IF_I2C_SDA_SRC, DBG_IF_I2C_SDA_AF);

    /* NVIC/Interrupt config */
    /* Configure and enable I2C event interrupt -------------------------------*/
    NVIC_InitStructure.NVIC_IRQChannel = DBG_IF_I2C_IRQ_CHANNEL;
    NVIC_InitStructure.NVIC_IRQChannelPriority = DBG_IF_I2C_IRQ_CH_PRIORITY;
    NVIC_InitStructure.NVIC_IRQChannelCmd = DBG_IF_I2C_IRQ_CH_CMD;
    NVIC_Init(&NVIC_InitStructure);

    /* GPIO Configuration for CLK and SDA signals */
    GPIO_InitStructure.GPIO_Pin   = DBG_IF_I2C_CLK_PIN  | DBG_IF_I2C_SDA_PIN;
    GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init( DBG_IF_I2C_GPIO_GRP, &GPIO_InitStructure );

    //Init the I2C driver interface
    I2C_StructInit(&I2C_InitStructure);
    
    //RCC_PERIPH_RESET_CMD_I2C(RCC_PERIPH_DBG_I2C, ENABLE);
    //RCC_PERIPH_RESET_CMD_I2C(RCC_PERIPH_DBG_I2C, DISABLE);

    I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
    I2C_InitStructure.I2C_Timing = DBG_IF_I2C_TIMING;
    I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;
    I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
    I2C_InitStructure.I2C_OwnAddress1 = DBG_IF_I2C_OWN_ADDRESS;
    I2C_InitStructure.I2C_AnalogFilter = I2C_AnalogFilter_Enable;
    I2C_Init(DBG_IF_I2C, &I2C_InitStructure);
    
    I2C_Cmd(DBG_IF_I2C, ENABLE);  
}

uint8_t I2C_Wait_Completion( void )
{
    uint8_t result = I2C_ERR_OK;
    uint16_t event = I2C_TXRX_STATUS_FAILED;

    
    if (OS_R_TMO == os_evt_wait_or(I2C_TXRX_STATUS_FAILED | I2C_TXRX_STATUS_PASSED | I2C_TXRX_STATUS_NACK, MSEC_TO_TICS(20)))
    {
        D0_printf("### WARNING - Timedout on I2C completion ###\r\n");
        result = I2C_ERR_FAIL;
    }
    else
    {
        event = os_evt_get();
        /* I2C driver can get any one of 3 events */
        if(event == I2C_TXRX_STATUS_FAILED)
        {
            result = I2C_ERR_FAIL;
        }
        else if(event == I2C_TXRX_STATUS_NACK)
        {
            result = I2C_ERR_ADDR_NACK;
        }
    }
    //return result
    return result;
}

uint8_t I2C_Start_Transfer( uint8_t slaveAddr, uint16_t regAddr, uint8_t *pData, uint16_t dataSize,
    I2C_SendMode_t sendMode )
{
    /* Check that no transfer is already pending*/
    if (_AsyncXfer.i2c_txrx_status == I2C_TXRX_STATUS_ACTIVE)
    {

        D0_printf("I2C_Start_Transfer: A transfer is already pending\n\r");
        return I2C_ERR_BUSY;
    }

    if ((sendMode == I2C_MASTER_READ) || (sendMode == I2C_MASTER_WRITE))
    {
        /* Update the transfer descriptor */
        _AsyncXfer.i2c_slave_addr  = (slaveAddr << 1);
        _AsyncXfer.i2c_slave_reg   = regAddr;
        _AsyncXfer.i2c_txrx_status = I2C_TXRX_STATUS_ACTIVE;
        _AsyncXfer.pData           = pData;
        _AsyncXfer.num             = dataSize;
        _AsyncXfer.byte_index      = 0;
        _AsyncXfer.i2c_txrx_phase  = W_XFER_STATE_SLA;
        _SendMode = sendMode;

        /* Enable interrupts and clear flags */
        I2C_ITConfig( DBG_IF_I2C, I2C_IT_ERRI | I2C_IT_TCI | I2C_IT_STOPI | I2C_IT_NACKI | I2C_IT_RXI
            | I2C_IT_TXI, ENABLE );
        I2C_ClearITPendingBit( DBG_IF_I2C, I2C_IT_ADDR | I2C_IT_NACKF | I2C_IT_STOPF | I2C_IT_BERR
            | I2C_IT_ARLO | I2C_IT_OVR | I2C_IT_PECERR | I2C_IT_TIMEOUT | I2C_IT_ALERT );

        /* Initiate start */
        if (sendMode == I2C_MASTER_WRITE)
        {
            /* If buffer size is < 255, set AUTOEND mode since we don't need to send any ReStarts */
            if (dataSize < I2C_NBYTES_MAX)
            {
                dataSize += 1; //Account for register address
                I2C_TransferHandling( DBG_IF_I2C, _AsyncXfer.i2c_slave_addr, dataSize, I2C_AutoEnd_Mode,
                    I2C_Generate_Start_Write );
            }
            else
            {
                I2C_TransferHandling( DBG_IF_I2C, _AsyncXfer.i2c_slave_addr, I2C_NBYTES_MAX, I2C_Reload_Mode,
                    I2C_Generate_Start_Write );
            }
            
            
        }
        else
        {
            /* We start with one byte for register address and then do the restart in ISR */
            I2C_TransferHandling( DBG_IF_I2C, _AsyncXfer.i2c_slave_addr, 1, I2C_SoftEnd_Mode, I2C_Generate_Start_Write );
        }
    }
    else
    {
        return I2C_ERR_REQ;
    }
    return I2C_ERR_OK;
}
